<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widget_margin">


    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/league_images"
                android:layout_width="368dp"
                android:layout_height="75"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView16">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/stage_20" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:alpha=".8"
                        android:background="@android:color/black"
                        android:paddingStart="8dp"
                        android:paddingEnd="0dp"
                        android:text="TextView"
                        android:textColor="@android:color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="118dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/stage_3" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:alpha=".8"
                        android:background="@android:color/black"
                        android:paddingStart="8dp"
                        android:paddingEnd="0dp"
                        android:text="TextView"
                        android:textColor="@android:color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </android.support.constraint.ConstraintLayout>
            </LinearLayout>

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_action_name" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/current_stages"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/menu_regular"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:layout_editor_absoluteX="8dp" />

            <TextView
                android:id="@+id/toTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="10 PM" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="17dp"
                android:layout_marginEnd="8dp"
                android:text="-"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
                app:layout_constraintEnd_toStartOf="@+id/toTime" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/now"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
                app:layout_constraintEnd_toStartOf="@+id/textView8" />

            <LinearLayout
                android:id="@+id/regular_images"
                android:layout_width="368dp"
                android:layout_height="75"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/stage_20" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:alpha=".8"
                        android:background="@android:color/black"
                        android:paddingStart="8dp"
                        android:paddingEnd="0dp"
                        android:text="TextView"
                        android:textColor="@android:color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="118dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/stage_3" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:alpha=".8"
                        android:background="@android:color/black"
                        android:paddingStart="8dp"
                        android:paddingEnd="0dp"
                        android:text="TextView"
                        android:textColor="@android:color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </android.support.constraint.ConstraintLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="212dp"
                tools:text="@string/mode_clamblitz" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView14"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="10 PM" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="-"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView15"
                app:layout_constraintEnd_toStartOf="@+id/textView13" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/now"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView12"
                app:layout_constraintEnd_toStartOf="@+id/textView14" />

            <LinearLayout
                android:id="@+id/ranked_images"
                android:layout_width="368dp"
                android:layout_height="75"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/stage_20" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:alpha=".8"
                        android:background="@android:color/black"
                        android:paddingStart="8dp"
                        android:paddingEnd="0dp"
                        android:text="TextView"
                        android:textColor="@android:color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="118dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/stage_3" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:alpha=".8"
                        android:background="@android:color/black"
                        android:paddingStart="8dp"
                        android:paddingEnd="0dp"
                        android:text="TextView"
                        android:textColor="@android:color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </android.support.constraint.ConstraintLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/mode_tower_control"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ranked_images" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView18"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="10 PM" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="-"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView19"
                app:layout_constraintEnd_toStartOf="@+id/textView17" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="Now"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView16"
                app:layout_constraintEnd_toStartOf="@+id/textView18" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>